samples/wig/should_pass/inverted_header.wig
fixedStep step=5 start=10 chrom=chr1 
3
2
1
