samples/wig/should_fail/bad_value.wig
fixedStep chrom=chr1 start=LOREM
1
2
3
